force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/CRMforNonProfit__Darujme_Pledge__c.object-meta.xml
<CustomObject>
    <label>Darujme Pledge</label>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Darujme Pledges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>