force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Amount__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>