force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__City__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>