force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Comment__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>