force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Company_Name__c</fullName>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>