force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Country__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>