force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Custom_Fields__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Custom_Fields__c</fullName>
    <label>Custom Fields (obsolete)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>