force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Donation_Certificate__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Donation_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donation Certificate</label>
    <type>Checkbox</type>
</CustomField>