force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Expected_Variable_Symbol__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Expected_Variable_Symbol__c</fullName>
    <label>Expected Variable Symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>