force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__First_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__First_Name__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>