force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Last_Transaction_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Last_Transaction_Expected_Date__c</fullName>
    <description>datum a čas očekávané poslední platby. u jednorázové platby tato položka neexistuje, u opakované může nabývat null hodnoty</description>
    <label>Last Transaction Expected Date</label>
    <type>DateTime</type>
</CustomField>