force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>