force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Phone__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>