force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Pledge_At2__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Pledge_At2__c</fullName>
    <label>Pledge At</label>
    <type>Date</type>
</CustomField>