force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Pledge_At__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Pledge_At__c</fullName>
    <label>Pledge At</label>
    <length>50</length>
    <type>Text</type>
</CustomField>