force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Pledge_ID__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Pledge_ID__c</fullName>
    <externalId>true</externalId>
    <label>Pledge ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>