force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Post_Code__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Post_Code__c</fullName>
    <label>Post Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>