force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Project_ID__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Project_ID__c</fullName>
    <label>Project ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>