force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Street__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Street__c</fullName>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>