force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/fields/CRMforNonProfit__Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Tax_ID__c</fullName>
    <label>Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>