force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/listViews/CRMforNonProfit__All.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All</fullName>
    <columns>NAME</columns>
    <columns>CRMforNonProfit__Transactions__c</columns>
    <columns>CRMforNonProfit__First_Name__c</columns>
    <columns>CRMforNonProfit__Last_Name__c</columns>
    <columns>CRMforNonProfit__Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CRMforNonProfit__Custom_Fields__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>