force-app/main/default/objects/CRMforNonProfit__Darujme_Pledge__c/listViews/CRMforNonProfit__All1.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>